--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ class="starting">Starting at $3.00 / brush</span>
     <img src="frames.jpeg">
     <h3>Art Frames (assorted)</h3>
     <p>Assorted frames made of different material, including MDF, birchwood, and PDE.
-Select frames can be sanded and paired according to your needs.<span
+Select frames can be sanded and paired according to your needs<span
 class="starting">Starting at $2.00 / frame</span>
     </p>
   </div>
